Small fix to align dropdown items with parent

--- a/src/components/Modals/Onboarding/Onboarding.scss
+++ b/src/components/Modals/Onboarding/Onboarding.scss
@@ -372,6 +372,7 @@ input {
     width: 100%;
     font-size: 14px;
     line-height: 17px;
+    padding-left: 0;
 
     color: #b6b6b6;
     position: relative;
